<resources>
    <string name="app_name">Office exercises</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_chrono">ChronoActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_pepe">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>


    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string-array name="training_1">
        <item>This is first text</item>
        <item>And this is second</item>
        <item>therd</item>
        <item>444444</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>
    <string name="set_exercise_duration_str">Длительность упражения</string>
    <string name="set_exercise_interval_str">Время перерыва</string>
    <string name="pref_dialog_duration_name">Задать продолжительность в секундах</string>
    <string name="pref_dialog_cancel_button">Отменить</string>
    <string name="pref_dialog_ok_button">Задать</string>

    <string name="pref_duration_toast_too_small">Меньше нельзя</string>
    <string name="pref_duration_toast_too_big">Слишком большое значение</string>

    <string name="pref_notification_title">Уведомления</string>
    <string name="pref_begin_timepicker">Задать время начала</string>
    <string name="pref_end_timepicker">Задать время оконачания</string>
    <string name="seconds">секунд</string>
    <string name="minutes">минут</string>

    <string name="notification_timer_str">Промежуток повторения</string>

    <string name="notification_title">Пора размяться!</string>

    <string name="finish_button_text">Закончить</string>
    <string name="finish_text">Вот и закончили. \nДо скорой встречи!</string>
    <string name="time_spent_text">Затраченно:</string>

    <string name="main_start_button">Начать</string>
    <string name="sensor">Сенсор</string>
</resources>
